fix: fixes top clipping issue in safari

--- a/src/components/arts/style.scss
+++ b/src/components/arts/style.scss
@@ -3,7 +3,6 @@
 .parent {
   display: flex;
   position: relative;
-  height: 100vh;
   justify-content: center;
   align-items: center;
   min-width: 100vw;
